feat: Add tile progression to help modal

--- a/index.html
+++ b/index.html
@@ -195,6 +195,22 @@
             margin-bottom: 10px;
         }
 
+        #tile-progression {
+            margin-top: 15px;
+            text-align: center;
+        }
+
+        #tile-progression h3 {
+            font-size: 1.2rem;
+            margin-bottom: 10px;
+        }
+
+        #tile-progression p {
+            margin: 0;
+            font-size: 0.9rem;
+            line-height: 1.5;
+        }
+
         #help-close-btn {
             background-color: #8b7969;
             color: white;
@@ -249,6 +265,20 @@
                     <li>A new tile appears after every move.</li>
                     <li>The game ends when the board is full and no moves are left.</li>
                 </ul>
+                <div id="tile-progression">
+                    <h3>Tile Progression</h3>
+                    <p>
+                        ⛺ + ⛺ = 🛖<br>
+                        🛖 + 🛖 = 🏠<br>
+                        🏠 + 🏠 = 🏡<br>
+                        🏡 + 🏡 = 🏢<br>
+                        🏢 + 🏢 = 🏙️<br>
+                        🏙️ + 🏙️ = 🏰<br>
+                        🏰 + 🏰 = 🏛️<br>
+                        🏛️ + 🏛️ = 🗼<br>
+                        🗼 + 🗼 = 🚀<br>
+                    </p>
+                </div>
                 <button id="help-close-btn">Got It!</button>
             </div>
         </div>
