--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                     <h2>How to Play</h2>
                     <p>The goal is to get the highest score by merging tiles.</p>
                     <ul>
-                        <li>Use <strong>arrow keys</strong> or <strong>swipe</strong> to move all tiles.</li>
+                        <li>Use <strong>arrow keys</strong> or <strong>swipe</strong> (or click-and-drag with a mouse on desktop) to move all tiles.</li>
                         <li>When two identical tiles touch, they <strong>merge</strong> into a new one.</li>
                         <li>A new tile appears after every move.</li>
                         <li>The game ends when the board is full and no moves are left.</li>
