--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
         </div>
     </div>
 
-    <audio id="merge-sound" src="sounds/merge.wav" preload="auto"></audio>
-    <audio id="pop-sound" src="sounds/pop.wav" preload="auto"></audio>
+    <audio id="merge-sound" src="sounds/yay.mp3" preload="auto"></audio>
+    <audio id="pop-sound" src="sounds/pop.mp3" preload="auto"></audio>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
