fix: use correct mp3 file names

--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
         </div>
     </div>
 
-    <audio id="merge-sound" src="sounds/yay.mp3" preload="auto"></audio>
-    <audio id="pop-sound" src="sounds/pop.mp3" preload="auto"></audio>
+    <audio id="merge-sound" src="sounds/yay-6326.mp3" preload="auto"></audio>
+    <audio id="pop-sound" src="sounds/pop-423717.mp3" preload="auto"></audio>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
