feat: use emoji for 'How to Play' button and adjust padding

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             background-color: #8b7969;
             color: white;
             border: none;
-            padding: 12px 20px;
+            padding: 12px;
             border-radius: 6px;
             font-size: 1rem;
             font-weight: 700;
@@ -258,7 +258,7 @@
                     <div id="score">0</div>
                 </div>
                 <button id="mute-btn">🔊</button>
-                <button id="help-btn">How to Play</button>
+                <button id="help-btn">❓</button>
                 <button id="new-game-btn">New Game</button>
             </div>
         </div>
