--- a/index.html
+++ b/index.html
@@ -421,14 +421,14 @@
             const TILE_DATA = [
                 { emoji: '⛺', score: 2, color: '#eee4da', glow: null },   // Level 1 - no glow
                 { emoji: '🛖', score: 4, color: '#ede0c8', glow: null },   // Level 2 - no glow
-                { emoji: '🏠', score: 8, color: '#f2b179', glow: 'rgba(242, 177, 121, 0.4)' },   // Level 3
-                { emoji: '🏡', score: 16, color: '#f59563', glow: 'rgba(245, 149, 99, 0.5)' },  // Level 4
-                { emoji: '🏢', score: 32, color: '#f67c5f', glow: 'rgba(246, 124, 95, 0.5)' },  // Level 5
-                { emoji: '🏙️', score: 64, color: '#f65e3b', glow: 'rgba(246, 94, 59, 0.6)' },  // Level 6
-                { emoji: '🏰', score: 128, color: '#edcf72', glow: 'rgba(237, 207, 114, 0.7)' }, // Level 7
-                { emoji: '🏛️', score: 256, color: '#edcc61', glow: 'rgba(237, 204, 97, 0.7)' }, // Level 8
-                { emoji: '🗼', score: 512, color: '#edc850', glow: 'rgba(237, 200, 80, 0.8)' }, // Level 9
-                { emoji: '🚀', score: 1024, color: '#edc53f', glow: 'rgba(255, 215, 0, 0.9)' } // Level 10 - golden glow!
+                { emoji: '🏠', score: 8, color: '#f2b179', glow: null },   // Level 3 - no glow
+                { emoji: '🏡', score: 16, color: '#f59563', glow: null },  // Level 4 - no glow
+                { emoji: '🏢', score: 32, color: '#f67c5f', glow: '#ff6b6b' },  // Level 5 - red glow
+                { emoji: '🏙️', score: 64, color: '#f65e3b', glow: '#ff4757' },  // Level 6 - bright red
+                { emoji: '🏰', score: 128, color: '#edcf72', glow: '#ffa502' }, // Level 7 - orange
+                { emoji: '🏛️', score: 256, color: '#edcc61', glow: '#ffdd59' }, // Level 8 - yellow
+                { emoji: '🗼', score: 512, color: '#edc850', glow: '#fff200' }, // Level 9 - bright yellow
+                { emoji: '🚀', score: 1024, color: '#edc53f', glow: '#00ff88' } // Level 10 - neon green!
             ];
 
             // Easing functions for smooth animations
@@ -564,21 +564,37 @@
 
                 // Draw glow effect for higher-level tiles
                 if (tile.glow) {
-                    const glowIntensity = Math.min(level / 10, 1);
-                    const glowSize = cellSize * 0.15 * glowIntensity * scale;
-                    const pulseOffset = Math.sin(Date.now() / 500 + level) * 0.15 + 1; // Subtle pulse
+                    const pulseOffset = Math.sin(Date.now() / 400 + level) * 0.3 + 1; // Pulsing effect
+                    const baseGlowSize = 8 + (level - 4) * 4; // Bigger glow for higher levels
+                    const glowBlur = baseGlowSize * pulseOffset * scale;
                     
+                    // Draw multiple glow layers for intense effect
+                    for (let i = 3; i >= 1; i--) {
+                        ctx.save();
+                        ctx.shadowColor = tile.glow;
+                        ctx.shadowBlur = glowBlur * i;
+                        ctx.shadowOffsetX = 0;
+                        ctx.shadowOffsetY = 0;
+                        ctx.globalAlpha = 0.4 / i;
+                        ctx.fillStyle = tile.glow;
+                        drawRoundedRect(ctx, scaledX, scaledY, scaledSize, scaledSize, cornerRadius * scale);
+                        ctx.fill();
+                        ctx.restore();
+                    }
+
+                    // Draw outer glow ring
+                    ctx.save();
+                    const ringSize = 4 * pulseOffset * scale;
+                    ctx.strokeStyle = tile.glow;
+                    ctx.lineWidth = 2 * scale;
+                    ctx.globalAlpha = 0.6 * (pulseOffset - 0.7);
                     ctx.shadowColor = tile.glow;
-                    ctx.shadowBlur = (15 + level * 3) * pulseOffset * scale;
-                    ctx.shadowOffsetX = 0;
-                    ctx.shadowOffsetY = 0;
-                    
-                    // Draw multiple layers for stronger glow
-                    ctx.fillStyle = tile.glow;
-                    drawRoundedRect(ctx, scaledX - glowSize/2, scaledY - glowSize/2, 
-                                    scaledSize + glowSize, scaledSize + glowSize, 
-                                    cornerRadius * scale * 1.2);
-                    ctx.fill();
+                    ctx.shadowBlur = 15 * scale;
+                    drawRoundedRect(ctx, scaledX - ringSize, scaledY - ringSize, 
+                                    scaledSize + ringSize * 2, scaledSize + ringSize * 2, 
+                                    cornerRadius * scale * 1.5);
+                    ctx.stroke();
+                    ctx.restore();
                 }
 
                 // Reset shadow for tile background
@@ -1117,7 +1133,7 @@
             function hasGlowingTiles() {
                 for (let r = 0; r < SIZE; r++) {
                     for (let c = 0; c < SIZE; c++) {
-                        if (grid[r][c] >= 3) return true; // Level 3+ has glow
+                        if (grid[r][c] >= 5) return true; // Level 5+ has glow
                     }
                 }
                 return false;
